@@ -7,6 +7,9 @@
 
 <ul>
 
+	<li>Added two exceptions to the LGPL to support static
+	linking of applications against Mini-XML.</li>
+
 	<li>The mxmldoc program now supports "@since version@"
 	and "@deprecated@" comments.</li>
 
